<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">4uMusic</string>
    <string name="app_slogan">Listen, Feel the Experience</string>
    <string name="drawer">4uMusic</string>
    <string name="title_perm_storage">Storage Access</string>
    <string name="subtitle_perm_storage">We need this permission to save and read all songs.</string>
    <string name="action_continue">Continue</string>
    <string name="action_ok">OK, Set This</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_appereance">App Theme</string>
    <string name="subtitle_appereance">Would you like to set the Application UI theme?</string>
    <string name="string_subtitle_appereance">Select Application UI theme</string>
    <string name="title_dialog_theme">Set Theme</string>
    <string name="title_item_set_follow_system">Follow System</string>
    <string name="title_item_set_dark_theme">Dark Theme</string>
    <string name="title_item_set_light_theme">Light Theme</string>
    <string name="greeting_morning">Good Morning!</string>
    <string name="greeting_afternoon">Good Afternoon!</string>
    <string name="good_afternoon">Good Afternoon!</string>
    <string name="good_night">Good Night!</string>
    <string name="tabs_item_home">Home</string>
    <string name="tabs_item_song">Song</string>
    <string name="tabs_item_download">Download</string>
    <string name="string_action_settings">Settings</string>
    <string name="action_string_artist_notfound">Artist not found</string>
    <string name="action_title_deletesong">Delete Song</string>
    <string name="action_dialog_title_delete">Delete</string>
    <string name="action_dialog_subtitle_delete">Are you sure you want to delete?</string>
    <string name="action_must_disable_repeat">Disable repeat mode first.</string>
    <string name="action_must_disable_shuffle">Disable random mode first.</string>
    <string name="random_mode_activate">Random Mode Enabled</string>
    <string name="random_mode_disabled">Random Mode Disabled</string>
    <string name="repeat_allsongs_mode">Repeat all songs</string>
    <string name="repeat_songs_one_mode">Repeat current song</string>
    <string name="repeat_mode_nonactivate">Repeat mode disabled</string>
</resources>