<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linearMain"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="1">
		<LinearLayout
			android:id="@+id/linearImage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/icon"
				android:layout_width="250dp"
				android:layout_height="250dp"
				android:src="@drawable/icon"
				android:scaleType="fitXY" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linearText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			<TextView
				android:id="@+id/textApp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/app_name"
				android:textSize="25sp"
				android:textStyle="bold"
				android:textColor="?attr/colorOnSurface" />
			<TextView
				android:id="@+id/textSlogan"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/app_slogan"
				android:textSize="18sp" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linearConguration"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<iiec.ditzdev.fourumusic.components.SettingsSwitch
				android:id="@+id/btnPermStorage"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:orientation="vertical"
				android:clickable="true"
				android:focusable="true"
				android:background="?attr/selectableItemBackground"
				app:title="@string/title_perm_storage"
				app:subtitle="@string/subtitle_perm_storage"
				app:icon="@drawable/icon_storage" />
        	<iiec.ditzdev.fourumusic.components.SettingsLayout
                android:id="@+id/btnSetTheme"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:orientation="vertical"
				android:clickable="true"
				android:focusable="true"
				android:background="?attr/selectableItemBackground"
				app:title="@string/title_appereance"
				app:subtitle="@string/subtitle_appereance"
				app:icon="@drawable/icon_theme" />
		</LinearLayout>
	</LinearLayout>
	<Button
		android:id="@+id/btnContinue"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:text="@string/action_continue"
		android:textSize="16sp"
		android:textColor="?attr/android:colorBackground" />
</LinearLayout>
