<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:background="?attr/android:colorBackground">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/string_action_settings"
                android:elevation="0dp" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <iiec.ditzdev.fourumusic.components.SettingsLayout
                android:id="@+id/btnSetTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/title_appereance"
                app:subtitle="@string/string_subtitle_appereance"
                app:icon="@drawable/icon_theme" />


            <View
                android:layout_height="2dp"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?attr/colorSurfaceVariant" />
            
            <iiec.ditzdev.fourumusic.components.SettingsLayout
                android:id="@+id/openSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="Source Code"
                app:subtitle="Source Code On GitHub"
                app:icon="@drawable/icon_code" />
            
            <iiec.ditzdev.fourumusic.components.SettingsLayout
                android:id="@+id/openLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="Open Source License"
                app:icon="@drawable/icon_license" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
